# aegis-ir

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_PLAN.md  Dockerfile  HACKATHON_WRITEUP.md  LICENSE  README.md  SPLUNK_INTEGRATION.md  alembic.ini  cloudbuild.yaml  deploy.sh  load_attack_data.py  patch_cases.py  patch_cases_page.py  patch_dashboard.py  patch_pages.py  pyproject.toml  seed_roles.py  setup_cloud_db.py  start_server.py  test_demo.py  update_dashboard.py  verify_local.py
sample_data/: attack_events.csv  ransomware_attack.csv
scripts/: create_test_evidence.py  setup.sh  start.sh
src/sift_defender/: __init__.py  instrumentation.py  main.py  mcp_config.json
src/sift_defender/agents/: __init__.py  correlation.py  disk.py  memory.py  orchestrator.py  production_agent.py  reporting.py  triage.py
src/sift_defender/agents/prompts/: orchestrator.py
src/sift_defender/engine/: __init__.py  audit_logger.py  evaluators.py  investigation.py  journal.py  self_correction.py  self_introspection.py
src/sift_defender/enterprise/: __init__.py  db.py
src/sift_defender/guardrails/: __init__.py  hallucination_check.py
src/sift_defender/knowledge/: corroboration_rules.yaml  forensic_caveats.yaml
src/sift_defender/phoenix/: __init__.py  evaluator.py  guardrail_pipeline.py  improvement_loop.py  tracer.py
src/sift_defender/tools/: __init__.py  base.py  correction_tools.py  correlation_tools.py  disk_tools.py  evidence_tools.py  memory_tools.py  phoenix_tools.py  reporting_tools.py  sift_tools.py  splunk_tools.py  triage_tools.py
src/sift_defender/utils/: __init__.py  rate_limiter.py
src/sift_defender/web/: __init__.py  app.py  investigation_runner.py  routes.py
tests/: __init__.py
tests/enterprise/: test_001_initial_schema.py  test_002_seed_default_roles.py  test_003_row_level_security.py  test_004_audit_log.py  test_audit_export.py  test_audit_middleware.py  test_audit_search.py  test_audit_service.py  test_auth_dependencies.py  test_auth_endpoints.py  test_db.py  test_idp_mapping.py  test_jwt.py  test_observability_accuracy.py  test_observability_aggregator.py  test_observability_cache.py  test_observability_eval_summary.py  test_observability_evals_endpoint.py  test_observability_live_spans.py  test_observability_routes.py  test_observability_tool_effectiveness.py  test_oidc.py  test_pbt_accuracy.py  test_pbt_audit.py  test_pbt_rbac.py  test_rbac_engine.py  test_rbac_permissions.py  test_require_permission.py  test_role_crud.py  test_websocket_auth.py
(+23 files in other folders)
